--- a/src/components/pokedle/Pokedle.scss
+++ b/src/components/pokedle/Pokedle.scss
@@ -44,7 +44,7 @@
   font-size: 18px;
   cursor: pointer;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 15px;
 
   &:hover {
     background: none;
@@ -63,8 +63,9 @@
     outline: none;
     width: 200px;
     height: 30px;
+    font-family: Avenixel, sans-serif;
   }
-  padding: 40px;
+  padding: 0 40px 40px 40px;
   display: block;
   text-align: center;
 }
@@ -86,4 +87,47 @@
      }
    }
 
+}
+
+@for $i from 3 through 8 {
+  $time: 0.6s;
+    #last-choice div:nth-child(#{$i}) {
+      opacity: 0;
+      animation: wait 1ms linear, $time
+      flipInY calc($time*($i - 3)) linear ;
+      animation-fill-mode: forwards;
+    }
+}
+
+@keyframes wait {
+
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
+#poke-buttons {
+  display: none;
+  justify-content: center;
+  margin: 0 0 15px;
+}
+
+#poke-next-button {
+  font-size: 18px;
+  background: linear-gradient(-180deg, #FF7E31, #E62C03);
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  color: white;
+  overflow: hidden;
+  cursor: pointer;
+  border: none;
+  font-family: Avenixel, sans-serif;
+  padding: 10px 20px;
+  &:hover {
+    box-shadow: rgba(253, 76, 0, 0.5) 0 3px 8px;
+  }
 }
