--- a/src/components/pokedle/PokedleAnswer.scss
+++ b/src/components/pokedle/PokedleAnswer.scss
@@ -17,6 +17,9 @@
     &:first-child {
       margin-left: 10px;
     }
+    /*&:nth-child(n + 3) {
+      animation: flipInX 1.5s;
+    }*/
     width: 60px;
     height: 60px;
     margin-right: 10px;
@@ -54,4 +57,8 @@
   &.more {
     transform: rotate(-90deg);
   }
+}
+
+.poke-hide {
+  //visibility: hidden;
 }
